--- a/backend_part/backend-producer/src/main/resources/application.properties
+++ b/backend_part/backend-producer/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=Dsa-sage-backend-producer
 
+
+server.port=8080
+
 #mongo db url
 spring.data.mongodb.uri=mongodb://localhost:27017/DSA_Sage
 
